--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -18,7 +18,7 @@
 	</header>
 	<section>
 		<div class="banner">
-			<img src="images/banner-img.jpg">
+			<img src="static/images/banner-img.jpg">
 			<h1>Connecting people to Fresh Farm products</h1>
 			<h2>Sign up</h2>
 	
