--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -2,4 +2,93 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: sans-serif;
+	width: 100%;
+	font-size: 16px;
+}
+header{
+	position: absolute;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 20px;
+	background-color: rgb(218, 226, 233);
+
+}
+h1{
+	font-size: 40px;
+	font-weight: 500;
+		
+}
+h1 span{
+	color: rgb(10, 168, 37);
+	font-size: 40px;
+}
+ul{
+	display: flex;
+	justify-content: right;
+	cursor: pointer;
+
+}
+#link-head{
+	align-items: center;
+}
+li{
+	list-style: none;
+}
+li a{
+	text-decoration: none;
+	color: rgb(46, 46, 46);
+}
+#head-links a:hover{
+	color: rgb(10, 168, 37);
+}
+section{
+	width: 100%;
+	height: 100vh;
+
+}
+.banner{
+	position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+}
+.banner img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; 
+}
+.banner h1{
+	text-align: center;
+    font-weight: 600;
+    font-size: 40px;
+    margin-bottom: 10px;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 5px;
+}
+.banner h2{
+	background: rgb(73, 190, 73);
+    display: inline-block;
+	width: 120px;
+    padding: 10px;
+    margin: 0 auto;
+    border-radius: 5px;
+    text-align: center;
+	cursor: pointer;
+}
+.banner h2:hover{
+	background-color: rgb(6, 180, 6);
 }
