--- a/static/templates/sign_in.html
+++ b/static/templates/sign_in.html
@@ -19,6 +19,7 @@
 					<option value="farmer">Farmer</option>
 				</select>
 			</form>
+			<button value="farmer">Sign Up</button>
 			<button value="farmer">Go to login</button>
 	</section>
 </body>
