--- a/static/templates/products.html
+++ b/static/templates/products.html
@@ -18,7 +18,7 @@
 					<img src="{{ url_for('static', filename='images/tomatoes.PNG') }}" alt="Tomatoes">
 					<h3> Tomatoes</h3>
 					<p>Price: $2/kg</p>
-				</div
+				</div>
 				<div class="product">
 					<img src="{{ url_for('static', filename='images/veges.PNG') }}" alt="Vegetables">
 					<h3> Vegetables</h3>
