--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -3,17 +3,18 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: sans-serif;
-	width: 100%;
 	font-size: 16px;
 }
 header{
-	position: absolute;
+	position: fixed;
 	top: 0;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px;
 	background-color: rgb(218, 226, 233);
+	z-index: 10;
 
 }
 h1{
