--- a/static/templates/products.html
+++ b/static/templates/products.html
@@ -18,7 +18,7 @@
 					<li>
 						<h2>{{ product['name'] }}</h2>
 						<p>Price: ${{ product['price'] }}</p>
-						<p>Owner: {{ product['owner'] }}</p>
+						<p>Owner: {{ product['farmer'] }}</p>
 					</li>
 				{% else %}
 					<li>No products available</li>
