--- a/static/templates/sign_up.html
+++ b/static/templates/sign_up.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign Up</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="{{ url_for('login') }}" method="post">
+    <h2>Sign Up</h2>
+    <form action="{{ url_for('sign_up') }}" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <br>
         <label for="contact">Contact:</label>
         <input type="text" id="contact" name="contact" required>
         <br>
-        <label for="user_type">User Type:</label>
-        <select id="user_type" name="user_type">
-            <option value="customer">Customer</option>
-            <option value="farmer">Farmer</option>
-        </select>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" required>
         <br>
-        <button type="submit">Login</button>
+        <button type="submit">Sign Up</button>
     </form>
 </body>
 </html>
