--- a/static/templates/sign_in.html
+++ b/static/templates/sign_in.html
@@ -19,7 +19,7 @@
 					<option value="farmer">Farmer</option>
 				</select>
 			</form>
-			<button value="farmer">Sign Up</button>
+			<button value="farmer"><a href="{{ url_for('sign_up')}}">Sign Up</a></button>
 			<button value="farmer">Go to login</button>
 	</section>
 </body>
