--- a/static/styles/sign-in.css
+++ b/static/styles/sign-in.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f0f0f0;
+    background-color: #99d894;
     display: grid;
     justify-items: center;
     align-items: center;
@@ -36,7 +36,7 @@ section {
     width: 100%;
     max-width: 400px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 0; /* Remove any extra margin */
+    margin: 0;
 }
 
 .sign-in-form {
@@ -48,6 +48,10 @@ section {
 .form-group {
     margin-top: 10px;
     margin-bottom: 15px;
+}
+select{
+    padding: 5px;
+    font-size: 16px;
 }
 
 .form-group label {
@@ -64,6 +68,9 @@ section {
     width: 100%;
     font-size: 16px;
 }
+label{
+    margin: 15px
+}
 
 .form-group button {
     background-color: green;
@@ -74,6 +81,12 @@ section {
 
 .form-group button:hover {
     background-color: darkgreen;
+}
+button{
+    margin: 10px;
+    border-radius: 5px;
+    border: 1px solid #0000;
+    background: #99d894;
 }
 
 @media (max-width: 600px) {
