pproducts page added and also worked on sign in page

--- a/static/templates/products.html
+++ b/static/templates/products.html
@@ -18,7 +18,9 @@
 					<li class="product-item">
 						<h3>{{ product['name'] }}</h2>
 						<p>Price: ${{ product['price'] }}</p>
-						<p>Owner: {{ product['farmer'] }}</p>
+						<p>Farmer: {{ product['farmer']['name'] }}</p>
+						<p>Contact: {{ product['farmer']['contact'] }}</p>
+						<p>address: {{ product['farmer']['address'] }}</p>
 					</li>
 				{% else %}
 					<li>No products available</li>
