--- a/static/templates/sign_in.html
+++ b/static/templates/sign_in.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="{{ url_for('static', filename='styles/sign-in.css') }}">
-	<title>Sign-in</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/sign-in.css') }}">
+    <title>Sign-in</title>
 </head>
 <body>
-	<header>
-		<h1>Farm<span>link</span></h1>
-	</header>
-	<section>
-		<div class="sign-in-form">
-			<form action="{{ url_for('login') }}" method="posts">
-				<label for="user_type">Sign Up as:</label>
-				<select name="user_type" id="user_type">
-					<option value="customer">Customer</option>
-					<option value="farmer">Farmer</option>
-				</select>
-			</form>
-			<button value="farmer"><a href="{{ url_for('sign_up')}}">Sign Up</a></button>
-			<button value="farmer">Go to login</button>
-	</section>
+    <header>
+        <h1>Farm<span>link</span></h1>
+    </header>
+    <section>
+        <div class="sign-in-form">
+            <form action="{{ url_for('sign_up_or_login') }}" method="post">
+                <label for="user_type">Sign Up/Login as:</label>
+                <select name="user_type" id="user_type" required>
+                    <option value="customer">Customer</option>
+                    <option value="farmer">Farmer</option>
+                </select>
+                <br>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <br>
+                <label for="contact">Contact:</label>
+                <input type="text" id="contact" name="contact" required>
+                <br>
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address" required>
+                <br>
+                <button type="submit">Sign Up/Login</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
-
