--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -53,8 +53,6 @@ li a{
 section{
 	width: 100%;
 	margin-top: 70px;
-	position: fixed;
-
 }
 .banner{
 	position: relative;
@@ -78,28 +76,100 @@ section{
     z-index: -1; 
 }
 .banner h1{
+	font-family: 'Garamond', 'Georgia', serif;
 	text-align: center;
-    font-weight: 600;
-    font-size: 40px;
+    font-weight: 400;
+    font-size: 50px;
     margin-bottom: 10px;
     display: inline-block;
     padding: 10px;
     border-radius: 5px;
 }
 .banner h2{
-	background: rgb(73, 190, 73);
-    display: inline-block;
-	width: 120px;
-    padding: 10px;
-    margin: 0 auto;
-    border-radius: 5px;
-    text-align: center;
+	font-family: 'Garamond', 'Georgia', serif;
+	text-align: center;
+    font-weight: 400;
+    font-size: 30px;
+    margin-bottom: 10px;
+	
+}
+.shop-btn{
+	background: #FDFDFD;
+	padding: 10px 30px;
+	border: none;
+	border-radius: 5px;
 	cursor: pointer;
 }
-.banner h2:hover{
-	background-color: rgb(6, 180, 6);
-}
-.banner h2 a{
+.shop-btn a{
 	text-decoration: none;
-	color: white;
+	margin-right: 7px;
+}
+.shop-btn:hover{
+	background: rgb(10, 168, 37);
+	color: #FDFDFD;
+}
+.shop-btn a:hover{
+	color: #FDFDFD;
+	margin-right: 10px;
+
+}
+#about{
+	margin-top: 20px;
+	text-align: center;
+	background: #FFFFFF;
+
+}
+#about h1{
+	font-family: 'Garamond', 'Georgia', serif;
+	font-weight: 600;
+	border-bottom: 2px solid rgb(10, 168, 37);
+	display: inline-block;
+	padding: 10px;
+}
+ul.lable{
+	display: flex;
+	justify-content: space-around;
+	margin: 20px;
+}
+#text{
+	margin-top: 20px;
+	width: 60%;
+	text-align: center;
+	display: inline-block;
+	line-height: 30px;
+}
+#text p{
+	font-size: 20px;
+	font-family: 'Garamond', 'Georgia', serif;
+	font-size: 20px;
+}
+#text img{
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 90%;
+	object-fit: cover;
+	height: 300px;
+	border-radius: 10px;
+}
+.mission {
+	margin-top: 20px;
+	text-align: center;
+
+}
+
+.mission h1{
+	font-family: 'Garamond', 'Georgia', serif;
+	font-weight: 600;
+	border-bottom: 2px solid rgb(10, 168, 37);
+	display: inline-block;
+	padding: 10px;
+}
+
+.mission p{
+	font-size: 20px;
+	width: 100%;
+	text-align: center;
+	margin-top: 20px;
+	font-family: 'Garamond', 'Georgia', serif;
+	border: 1px solid red;
 }
