--- a/static/templates/add_product.html
+++ b/static/templates/add_product.html
@@ -15,23 +15,23 @@
             <h1>Add a New Product</h1>
 			<form method="post" action="{{ url_for('add_product') }}">
 				<label for="name">Product Name:</label>
-				<input type="text" id="name" name="name" required><br>
+                <input type="text" id="name" name="name" required><br>
 
-				<label for="description">Description:</label>
-				<input type="text" id="description" name="description" required><br>
+                <label for="Description">Description:</label>
+                <input type="text" id="Description" name="Description" required><br>
 
-				<label for="price">Price:</label>
-				<input type="number" id="price" name="price" required><br>
+                <label for="price">Price:</label>
+                <input type="number" id="price" name="price" required><br>
 
-				<label for="quantity">Quantity:</label>
-				<input type="number" id="quantity" name="quantity" required><br>
+                <label for="quantity">Quantity:</label>
+                <input type="number" id="quantity" name="quantity" required><br>
 
-				<input type="hidden" name="farmer_id" value="{{ current_user.id }}">
+                <input type="hidden" name="farmer_id" value="{{ current_user.id }}">
 
-				<label for="image">Product Image:</label>
+                <label for="image">Product Image:</label>
                 <input type="file" id="image" name="image" accept="image/*"><br>
 
-				<button type="submit">Add Product</button>
+                <button type="submit">Add Product</button>
 			</form> 
 	    </div>
     </section>
