--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -50,12 +50,13 @@
 			</div>
 			<div class="mission">
 				<h1>Our Mission</h1>
-				<p>
+				<p id="mission-text">
 					At Farmlink, our mission is to empower farmers by providing them with a robust platform
 					to showcase and sell their products directly to consumers. We aim to support sustainable
 					agriculture, reduce food wastage, and ensure that everyone has access to fresh, high-quality
 					produce at fair prices.
 				</p>
+				
 			</div>
 		</div>
 
