--- a/static/styles/sign-in.css
+++ b/static/styles/sign-in.css
@@ -34,15 +34,16 @@ section {
     border: 1px solid #ddd;
     border-radius: 8px;
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 0;
 }
 
 .sign-in-form {
     display: grid;
+    align-items: center;
     flex-direction: column;
-    height: 200px;
+    height: 500px;
 }
 
 .form-group {
@@ -50,14 +51,31 @@ section {
     margin-bottom: 15px;
 }
 select{
-    padding: 5px;
-    font-size: 16px;
+    width: 300px;
+	height: 40px;
+	border: 1px solid rgb(10, 168, 37);
+	border-radius: 5px;
+	padding: 5px;
+	margin-top: 10px;
 }
-
+section h2{
+	margin-top: 20px;
+	font-family: 'Garamond', 'Georgia', serif;
+	color: rgb(46, 46, 46);
+	font-size: 40px;
+	font-weight: 700;
+}
+input{
+	width: 300px;
+	height: 40px;
+	border: 1px solid rgb(10, 168, 37);
+	border-radius: 5px;
+	padding: 5px;
+	margin-top: 10px;
+}
 .form-group label {
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #333;
+    font-size: 20px;
+	font-weight: 500;
 }
 
 .form-group select,
@@ -68,8 +86,9 @@ select{
     width: 100%;
     font-size: 16px;
 }
-label{
-    margin: 15px
+#signin{
+    margin: 15px;
+    align-items: center;
 }
 
 .form-group button {
@@ -83,12 +102,18 @@ label{
     background-color: darkgreen;
 }
 button{
-    margin: 10px;
-    border-radius: 5px;
-    border: 1px solid #0000;
-    background: #99d894;
+	width: 300px;
+	height: 40px;
+	border: 1px solid rgb(10, 168, 37);
+	border-radius: 5px;
+	padding: 5px;
+	margin-top: 10px;
+	background-color: rgb(10, 168, 37);
+	color: white;
+	font-size: 20px;
+	font-weight: 500;
+	cursor: pointer;
 }
-
 @media (max-width: 600px) {
     section {
         width: 90%;
