: Fix typo in product description key name

--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-		<h1>Farm<span>link</span></h1>
+		<h1><a href="{{ url_for('home') }}">Farm<span>link</span></a></h1>
 	</header>
     <section>
         <h2>Login</h2>
